Added some extra features

--- a/views/Shopping.ejs
+++ b/views/Shopping.ejs
@@ -9,16 +9,16 @@
       <h1>Dan's Clothing</h1>
       <nav>
         <ul>
-          <li><a href="/">Login</a></li>
+          <li><a href="/"></a></li>
         </ul>
       </nav>
     </header>
     <main>
       <h2>Shop</h2>
       <ul>
-        <img src="/Users/Tavia technology/Documents/pay/public/cloth 1.jpg" alt="Image 1" class="my-image">
-        <img src="/Users/Tavia technology/Documents/pay/public/cloth 2.jpg" alt="Image 2" class="my-image">
-        <img src="/Users/Tavia technology/Documents/pay/public/cloth 3.jpg" alt="Image 3" class="my-image">
+        <img src="/images/cloth1.jpg" alt="Image 1" class="my-image">
+        <img src="/images/cloth2.jpg" alt="Image 2" class="my-image">
+        <img src="/images/cloth3.jpg" alt="Image 3" class="my-image">
       </ul>
       <form action="/verify-otp" method="POST">
         <h3>Payment Details</h3>
